--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Symfony Developer</title>
+    <title>Experienced Backend Developer / Symfony / Laravel / PHP</title>
     <link href="./css/bootstrap.min.css" rel="stylesheet">
     
     <!-- Custom styles for this template -->
@@ -18,7 +18,7 @@
         <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
           <div class="col-lg-6 px-0">
             <h1 class="display-4 fst-italic">Serhiy Gryshchenko</h1>
-            <p class="lead my-3"><strong>Experienced Backend Developer (💎 16+ years in IT)</strong></p>
+            <p class="lead my-3"><strong>Experienced Backend Developer (💎 16+ years)</strong></p>
             <p class="lead mb-3"><strong>Symfony Framework / Laravel Framework / PHP</strong></p>
             <p class="lead mb-3"><strong>Location: Lviv, Ukraine</strong></p>
             <p class="lead mb-3">
@@ -77,7 +77,7 @@
                 ◾etc</p>
           </div>
           <div class="col-md-5">
-            <img src="images/portfolio1.png" width="500">
+            <img src="images/portfolio1.png" width="500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto">
           </div>
         </div>
 
@@ -96,7 +96,7 @@
                 ◾etc</p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img src="images/portfolio2.png" width="500">
+            <img src="images/portfolio2.png" width="500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto">
           </div>
         </div>
 
@@ -120,7 +120,7 @@
                 ◾etc</p>
           </div>
           <div class="col-md-5">
-            <img src="images/portfolio3.png" width="500">
+            <img src="images/portfolio3.png" width="500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto">
           </div>
         </div>
 
@@ -148,7 +148,7 @@
                 ◾etc</p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img src="images/portfolio4.png" width="500">
+            <img src="images/portfolio4.png" width="500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto">
           </div>
         </div>
 
@@ -176,7 +176,7 @@
                 ◾etc</p>
           </div>
           <div class="col-md-5">
-            <img src="images/portfolio5.png" width="500">
+            <img src="images/portfolio5.png" width="500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto">
           </div>
         </div>
 
@@ -201,7 +201,7 @@
                 ◾etc</p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img src="images/portfolio6.png" width="500">
+            <img src="images/portfolio6.png" width="500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto">
           </div>
         </div>
 
@@ -225,7 +225,7 @@
                 ◾etc</p>
           </div>
           <div class="col-md-5">
-            <img src="images/portfolio7.png" width="500">
+            <img src="images/portfolio7.png" width="500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto">
           </div>
         </div>
 
@@ -250,7 +250,7 @@
                 ◾etc</p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img src="images/portfolio8.png" width="500">
+            <img src="images/portfolio8.png" width="500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto">
           </div>
         </div>
 
@@ -274,7 +274,7 @@
                 ◾etc</p>
           </div>
           <div class="col-md-5">
-            <img src="images/portfolio9.png" width="500">
+            <img src="images/portfolio9.png" width="500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto">
           </div>
         </div>
 
@@ -299,7 +299,7 @@
                 ◾etc</p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img src="images/portfolio10.png" width="500">
+            <img src="images/portfolio10.png" width="500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto">
           </div>
         </div>
 
@@ -320,7 +320,7 @@
                 ◾etc</p>
           </div>
           <div class="col-md-5">
-            <img src="images/portfolio11.png" width="500">
+            <img src="images/portfolio11.png" width="500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto">
           </div>
         </div>
 
@@ -345,7 +345,7 @@
                 ◾etc</p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img src="images/portfolio12.png" width="500">
+            <img src="images/portfolio12.png" width="500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto">
           </div>
         </div>
 
@@ -372,7 +372,7 @@
                 ◾etc</p>
           </div>
           <div class="col-md-5">
-            <img src="images/portfolio13.png" width="500">
+            <img src="images/portfolio13.png" width="500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto">
           </div>
         </div>
 
@@ -396,7 +396,7 @@
                 ◾etc<br>
           </div>
           <div class="col-md-5 order-md-1">
-            <img src="images/portfolio14.png" width="500">
+            <img src="images/portfolio14.png" width="500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto">
           </div>
         </div>
 
