--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <main class="container">
-        <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
+        <div class="row p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
           <div class="col-lg-6 px-0">
             <h1 class="display-4 fst-italic">Serhiy Gryshchenko</h1>
             <p class="lead my-3"><strong>Experienced Backend Developer (💎 16+ years)</strong></p>
@@ -24,7 +24,10 @@
             <p class="lead mb-3">
                 <strong>Contacts: </strong><a href="https://www.linkedin.com/in/sergiyg/" target="_blank"><img src="images/linkedIn.svg" height="25" /></a>
             </p>
-            <p class="lead mb-0"></p>Updated: October 7, 2023</p>
+            <p class="lead mb-0"></p>Updated: September 17, 2024</p>
+          </div>
+          <div class="col-lg-6 px-0">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/LpLDFhGLc3A?si=TvfxbP7wZ9zxGYRw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
         </div>
     </main>
@@ -403,7 +406,7 @@
     </div>
 
     <footer class="py-5 text-center text-body-secondary bg-body-tertiary">
-      <p>© 2007-2023 Serhiy Gryshchenko</p>
+      <p>© 2007-2024 Serhiy Gryshchenko</p>
       <p class="mb-0">
         <a href="#">Back to top</a>
       </p>
