--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <link href="./css/blog.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="./css/carousel.css" rel="stylesheet">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X132G0M8XC"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-X132G0M8XC');
+    </script>
 </head>
 <body>
     <main class="container">
