--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <link href="./css/carousel.css" rel="stylesheet">
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X132G0M8XC"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TDFXP9HW07"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-X132G0M8XC');
+      gtag('config', 'G-TDFXP9HW07');
     </script>
 </head>
 <body>
