--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- Custom styles for this template -->
     <link href="./css/carousel.css" rel="stylesheet">
 
+    <meta name="google-site-verification" content="Ozt8WxE-E5D1K2iHmS9V7ncNKsnnLCsXpdwgLeEMBrs" />
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-TDFXP9HW07"></script>
     <script>
