gform and favicon were added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- Custom styles for this template -->
     <link href="./css/carousel.css" rel="stylesheet">
 
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+
     <meta name="google-site-verification" content="Ozt8WxE-E5D1K2iHmS9V7ncNKsnnLCsXpdwgLeEMBrs" />
 
     <!-- Google tag (gtag.js) -->
@@ -33,10 +35,10 @@
             <p class="lead my-3"><strong>Experienced Backend Developer (💎 16+ years)</strong></p>
             <p class="lead mb-3"><strong>Symfony Framework / Laravel Framework / PHP</strong></p>
             <p class="lead mb-3"><strong>Location: Lviv, Ukraine</strong></p>
-            <p class="lead mb-3">
-                <strong>Contacts: </strong><a href="https://www.linkedin.com/in/sergiyg/" target="_blank"><img src="images/linkedIn.svg" height="25" /></a>
+            <p class="lead mb-3"><small>Updated: September 26, 2024</small></p>
+            <p class="lead mb-0">
+                <!--strong>Contacts: </strong--><a href="https://www.linkedin.com/in/sergiyg/" target="_blank" class="cursor-pointer"><img src="images/linkedIn.svg" height="25" /></a>
             </p>
-            <p class="lead mb-0"></p>Updated: September 17, 2024</p>
           </div>
           <div class="col-lg-6 px-3">
             <iframe width="400" height="240" src="https://www.youtube.com/embed/LpLDFhGLc3A?si=TvfxbP7wZ9zxGYRw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -415,6 +417,13 @@
           </div>
         </div>
 
+
+        <hr class="featurette-divider">
+
+        <div class="row">
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdk-rOeyILgZJ1AzdYRZcYy10cxur9G77bFJS0yJlYkwnaIHg/viewform?embedded=true"
+          width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        </div>
     </div>
 
     <footer class="py-5 text-center text-body-secondary bg-body-tertiary">
