--- a/index.html
+++ b/index.html
@@ -45,12 +45,17 @@
         <div class="row p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
           <div class="col-lg-6 px-0">
             <h1 class="display-4 fst-italic">Serhiy Gryshchenko</h1>
-            <p class="lead my-3"><strong>Experienced Backend Developer (💎 16+ years)</strong></p>
+            <p class="lead my-3"><strong>Experienced Backend Developer (💎 17+ years)</strong></p>
             <p class="lead mb-3"><strong>Symfony Framework / Laravel Framework / PHP</strong></p>
-            <p class="lead mb-3"><strong>Location: Lviv, Ukraine</strong></p>
-            <p class="lead mb-3"><small>Updated: September 26, 2024</small></p>
-            <p class="lead mb-3">
-                <!--strong>Contacts: </strong--><a href="https://www.linkedin.com/in/sergiyg/" target="_blank" class="cursor-pointer"><img src="images/linkedIn.svg" height="25" /></a>
+            <p class="lead mb-3"><strong>Location: Lviv, Ukraine 🇺🇦</strong></p>
+            <p class="lead mb-3"><small>Updated: September 30, 2024</small></p>
+            <p class="lead mb-3"> 
+                <!--strong>Contacts: </strong--><a href="https://t.me/sergiypubspm" target="_blank" class="cursor-pointer" title="Telegram"><img src="images/telegram.svg" height="30" /></a> 
+                <a href="https://www.linkedin.com/in/sergiyg/" target="_blank" class="cursor-pointer ms-1" title="LinkedIn"><img src="images/linkedIn.svg" height="30" /></a> 
+                <a href="https://www.upwork.com/freelancers/~010db75fb99b973d3f" target="_blank" class="cursor-pointer ms-1" title="UpWork"><img src="images/upwork.svg" height="30" /></a> 
+                <a href="https://www.fiverr.com/seg_ua" target="_blank" class="cursor-pointer ms-1" title="Fiverr"><img src="images/fiverr.svg" height="30" /></a>
+                <a href="https://www.youtube.com/@it-advisor-ua" target="_blank" class="cursor-pointer ms-1" title="YouTube"><img src="images/youtube.svg" height="30" /></a>
+                <a href="#contact-form" class="cursor-pointer ms-1" title="Contact Form"><img src="images/gforms.svg" height="30" /></a>
             </p>
           </div>
           <div class="col-lg-6 px-3">
@@ -433,7 +438,7 @@
 
         <hr class="featurette-divider">
 
-        <div class="row">
+        <div class="row" id="contact-form">
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdk-rOeyILgZJ1AzdYRZcYy10cxur9G77bFJS0yJlYkwnaIHg/viewform?embedded=true"
           width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
