--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
             <p class="lead mb-3"><strong>Location: Lviv, Ukraine 🇺🇦</strong></p>
             <p class="lead mb-3"><small>Updated: September 30, 2024</small></p>
             <p class="lead mb-3"> 
-                <!--strong>Contacts: </strong--><a href="https://t.me/sergiypubspm" target="_blank" class="cursor-pointer" title="Telegram"><img src="images/telegram.svg" height="30" /></a> 
-                <a href="https://www.linkedin.com/in/sergiyg/" target="_blank" class="cursor-pointer ms-1" title="LinkedIn"><img src="images/linkedIn.svg" height="30" /></a> 
-                <a href="https://www.upwork.com/freelancers/~010db75fb99b973d3f" target="_blank" class="cursor-pointer ms-1" title="UpWork"><img src="images/upwork.svg" height="30" /></a> 
-                <a href="https://www.fiverr.com/seg_ua" target="_blank" class="cursor-pointer ms-1" title="Fiverr"><img src="images/fiverr.svg" height="30" /></a>
-                <a href="https://www.youtube.com/@it-advisor-ua" target="_blank" class="cursor-pointer ms-1" title="YouTube"><img src="images/youtube.svg" height="30" /></a>
+                <!--strong>Contacts: </strong-->
+                <a href="https://t.me/sergiypubspm" target="_blank" class="cursor-pointer" title="Telegram" rel="nofollow"><img src="images/telegram.svg" height="30" /></a> 
+                <a href="https://www.linkedin.com/in/sergiyg/" target="_blank" class="cursor-pointer ms-1" title="LinkedIn" rel="nofollow"><img src="images/linkedIn.svg" height="30" /></a> 
+                <a href="https://www.upwork.com/freelancers/~010db75fb99b973d3f" target="_blank" class="cursor-pointer ms-1" title="UpWork" rel="nofollow"><img src="images/upwork.svg" height="30" /></a> 
+                <a href="https://www.fiverr.com/seg_ua" target="_blank" class="cursor-pointer ms-1" title="Fiverr" rel="nofollow"><img src="images/fiverr.svg" height="30" /></a>
+                <a href="https://www.youtube.com/@it-advisor-ua" target="_blank" class="cursor-pointer ms-1" title="YouTube" rel="nofollow"><img src="images/youtube.svg" height="30" /></a>
                 <a href="#contact-form" class="cursor-pointer ms-1" title="Contact Form"><img src="images/gforms.svg" height="30" /></a>
             </p>
           </div>
