--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link href="./css/carousel.css" rel="stylesheet">
 
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="./images/icon.svg">
 
     <meta name="google-site-verification" content="Ozt8WxE-E5D1K2iHmS9V7ncNKsnnLCsXpdwgLeEMBrs" />
 
