--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
     <meta property="og:type" content="website">
     <meta property="og:description" content="💎 17+ years of experience in developing REST APIs, microservices, and monolithic applications. I'm an expert in web application architecture, database design, database query optimization, and development. I'm ready to help you with your tasks, so let’s start.">
     <meta property="og:site_name" content="SEG">
-    <!--meta property="og:image" content=""-->
+    <meta property="og:image" content="https://seg.cv.ua/images/favicon.ico">
     <meta property="og:url" content="/">
 
-    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://seg.cv.ua/css/bootstrap.min.css" rel="stylesheet">
     
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="./css/blog.css" rel="stylesheet">
+    <link href="https://seg.cv.ua/css/blog.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="./css/carousel.css" rel="stylesheet">
+    <link href="https://seg.cv.ua/css/carousel.css" rel="stylesheet">
 
-    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
-    <link rel="icon" type="image/svg+xml" href="./images/icon.svg">
+    <link rel="icon" type="image/x-icon" href="https://seg.cv.ua/images/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="https://seg.cv.ua/images/icon.svg">
+    <link rel="icon" type="image/png" sizes="144x144" href="https://seg.cv.ua/images/icon.png">
 
     <meta name="google-site-verification" content="Ozt8WxE-E5D1K2iHmS9V7ncNKsnnLCsXpdwgLeEMBrs" />
 
