--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
     <meta property="og:type" content="website">
     <meta property="og:description" content="💎 17+ years of experience in developing REST APIs, microservices, and monolithic applications. I'm an expert in web application architecture, database design, database query optimization, and development. I'm ready to help you with your tasks, so let’s start.">
     <meta property="og:site_name" content="SEG">
-    <meta property="og:image" content="https://seg.cv.ua/images/favicon.ico">
+    <meta property="og:image" content="./favicon.ico">
     <meta property="og:url" content="/">
 
-    <link href="https://seg.cv.ua/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
     
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="https://seg.cv.ua/css/blog.css" rel="stylesheet">
+    <link href="./css/blog.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="https://seg.cv.ua/css/carousel.css" rel="stylesheet">
+    <link href="./css/carousel.css" rel="stylesheet">
 
-    <link rel="icon" type="image/x-icon" href="https://seg.cv.ua/images/favicon.ico">
-    <link rel="icon" type="image/svg+xml" href="https://seg.cv.ua/images/icon.svg">
-    <link rel="icon" type="image/png" sizes="144x144" href="https://seg.cv.ua/images/icon.png">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="./images/icon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/icon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/icon-16x16.png">
 
     <meta name="google-site-verification" content="Ozt8WxE-E5D1K2iHmS9V7ncNKsnnLCsXpdwgLeEMBrs" />
 
@@ -50,7 +52,7 @@
             <p class="lead my-3"><strong>Experienced Backend Developer (💎 17+ years)</strong></p>
             <p class="lead mb-3"><strong>Symfony Framework / Laravel Framework / PHP</strong></p>
             <p class="lead mb-3"><strong>Location: Lviv, Ukraine 🇺🇦</strong></p>
-            <p class="lead mb-3"><small>Updated: September 30, 2024</small></p>
+            <p class="lead mb-3"><small>Updated: October 1, 2024</small></p>
             <p class="lead mb-3"> 
                 <!--strong>Contacts: </strong-->
                 <a href="https://t.me/sergiypubspm" target="_blank" class="cursor-pointer" title="Telegram" rel="nofollow"><img src="images/telegram.svg" height="30" /></a> 
