meta tag correction

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experienced Backend Developer | Symfony / Laravel / PHP</title>
 
-    <meta name="description" content="💎 17+ years of experience in developing REST APIs, microservices, and monolithic applications. I'm an expert in web application architecture, database design, database query optimization, and development. I'm ready to help you with your tasks, so let’s start.">
+    <meta name="description" content="💎 17+ years of experience. I'm an expert in web application architecture, database design, database query optimization, and development.">
 
     <link rel="canonical" href="https://seg.cv.ua/">
     <link rel="alternate" hreflang="en" href="/">
 
     <meta property="og:title" content="Experienced Backend Developer | Symfony / Laravel / PHP">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="💎 17+ years of experience in developing REST APIs, microservices, and monolithic applications. I'm an expert in web application architecture, database design, database query optimization, and development. I'm ready to help you with your tasks, so let’s start.">
+    <meta property="og:description" content="💎 17+ years of experience. I'm an expert in web application architecture, database design, database query optimization, and development.">
     <meta property="og:site_name" content="SEG">
     <meta property="og:image" content="./favicon.ico">
     <meta property="og:url" content="/">
