--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <a href="https://t.me/sergiypubspm" target="_blank" class="cursor-pointer" title="Telegram" rel="nofollow"><img src="images/telegram.svg" height="30" /></a> 
                 <a href="https://www.linkedin.com/in/sergiyg/" target="_blank" class="cursor-pointer ms-1" title="LinkedIn" rel="nofollow"><img src="images/linkedIn.svg" height="30" /></a> 
                 <a href="https://www.upwork.com/freelancers/~010db75fb99b973d3f" target="_blank" class="cursor-pointer ms-1" title="UpWork" rel="nofollow"><img src="images/upwork.svg" height="30" /></a> 
-                <a href="https://www.fiverr.com/seg_ua" target="_blank" class="cursor-pointer ms-1" title="Fiverr" rel="nofollow"><img src="images/fiverr.svg" height="30" /></a>
+                <!--a href="https://www.fiverr.com/seg_ua" target="_blank" class="cursor-pointer ms-1" title="Fiverr" rel="nofollow"><img src="images/fiverr.svg" height="30" /></a-->
                 <a href="https://www.youtube.com/@it-advisor-ua" target="_blank" class="cursor-pointer ms-1" title="YouTube" rel="nofollow"><img src="images/youtube.svg" height="30" /></a>
                 <a href="#contact-form" class="cursor-pointer ms-1" title="Contact Form"><img src="images/gforms.svg" height="30" /></a>
             </p>
