changes in content and favicon

--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
             <h1 class="display-4 fst-italic">Serhiy Gryshchenko</h1>
             <p class="lead my-3"><strong>Experienced Backend Developer (💎 17+ years)</strong></p>
             <p class="lead mb-3"><strong>Symfony Framework / Laravel Framework / PHP</strong></p>
-            <p class="lead mb-3"><strong>Location: Lviv, Ukraine 🇺🇦</strong></p>
-            <p class="lead mb-3"><small>Updated: October 1, 2024</small></p>
+            <p class="lead mb-3"><strong>Location: Ukraine 🇺🇦</strong></p>
+            <p class="lead mb-3"><strong>Hourly rate: $20-$30</strong></p>
+            <p class="lead mb-3"><small>Updated: October 16, 2024</small></p>
             <p class="lead mb-3"> 
                 <!--strong>Contacts: </strong-->
                 <a href="https://t.me/sergiypubspm" target="_blank" class="cursor-pointer" title="Telegram" rel="nofollow"><img src="images/telegram.svg" height="30" /></a> 
@@ -71,8 +72,94 @@
           </div>
         </div>
     </main>
+
+    <div class="container mb-3">
+      <div class="row align-items-md-stretch">
+        <div class="col-md-6 mb-3">
+          <div class="h-100 p-3 bg-light border rounded-3">
+            <h2>Performance Optimization and Fixes</h2>
+            <p>Are you facing any challenges with your website?</p>
+            <a href="#contact-form"  class="btn btn-primary">Message me</a>
+          </div>
+        </div>
+        <div class="col-md-6 mb-3">
+          <div class="h-100 p-3 bg-light border rounded-3">
+            <h2>New Development</h2>
+            <p>Do you need a new website or additional features for your existing one?</p>
+            <a href="#contact-form"  class="btn btn-primary">Message me</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container mb-3">
+      <div class="row g-5">
+        <div class="col-md-4">
+          <h2>I can:</h2>
+          <ul style="list-style-type: none;">
+            <li class="text-muted">◾ develop REST APIs (web service)</li>
+            <li class="text-muted">◾ integrate external APIs into your website or service</li>
+            <li class="text-muted">◾ develop a backend for mobile apps (APIs)</li>
+            <li class="text-muted">◾ develop an admin panel</li>
+            <li class="text-muted">◾ develop a bot (telegram / viber / etc)</li>
+            <li class="text-muted">◾ develop a cron job</li>
+            <li class="text-muted">◾ develop a console command</li>
+            <li class="text-muted">◾ integrate the HTML layout into your website</li>
+          </ul>
+        </div>
+
+        <div class="col-md-4">
+          <ul style="list-style-type: none;">
+            <li class="text-muted">◾ write unit tests for existing code</li>
+            <li class="text-muted">◾ fix bugs</li>
+            <li class="text-muted">◾ perform code optimization</li>
+            <li class="text-muted">◾ create a database for your needs (tables, relations, indexes, etc)</li>
+            <li class="text-muted">◾ perform database optimization (tables, queries, indexes)</li>
+            <li class="text-muted">◾ deploy your website on a server</li>
+            <li class="text-muted">◾ deploy the CMS on the server (Wordpress, etc)</li>
+            <li class="text-muted">◾ conduct a performance test of your website</li>
+            <li class="text-muted">◾ do a project audit (code, DB)</li>
+          </ul>
+        </div>
+
+        <div class="col-md-4">
+          <ul style="list-style-type: none;">
+            <li class="text-muted">◾ consult you</li>
+            <li class="text-muted">◾ go through an interview</li>
+            <li class="text-muted">◾ work with your dev team on an ongoing basis</li>
+            <li class="text-muted">◾ investigate and integrate new technologies and approaches into your website</li>
+            <li class="text-muted">◾ in cooperation with a front-end developer, I can develop everything you need</li>
+            <li class="text-muted">◾ etc</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="container mb-3">
+      <div class="row">
+        <div class="col-lg-4 mb-3">
+          <div class="h-100 p-3 bg-light border rounded-3">
+            <h2>Recommendation (LinkedIn)</h2>
+            <p>I highly recommend Serhiy as a PHP Symfony developer. I had the privilege of working closely with Serhiy for five years, during which time he consistently demonstrated a solid understanding of PHP and the Symfony framework ecosystem. Serhiy's involvement in up to 10 projects showcased not only his strong framework knowledge but also his architectural skills.</p>
+          </div>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4 mb-3">
+          <div class="h-100 p-3 bg-light border rounded-3">
+            <h2>Recommendation (LinkedIn)</h2>
+            <p>Serhiy is very responsible and client oriented person. He was playing as a good team member on several projects I was managing and I've enjoyed of his involvements on everyday tasks and engineering the product.</p>
+          </div>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4 mb-3">
+          <div class="h-100 p-3 bg-light border rounded-3">
+            <h2>Client Feedback (UpWork)</h2>
+            <p>Perfect. Very fast and high quality. Good communication.</p>
+          </div>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+    </div>
+    
     <div class="container marketing">
-        <h5 class="display-6 link-body-emphasis mb-3">Skills</h5>
+        <h5 class="display-6 link-body-emphasis mb-3">My skills</h5>
         <div class="mb-5">
             <span class="badge text-bg-secondary">PHP</span>
              <span class="badge text-bg-secondary">Symfony</span>
@@ -98,7 +185,7 @@
              <span class="badge text-bg-secondary">Ubuntu</span></div>
 
 
-        <h2 class="display-6 link-body-emphasis mb-5">Portfolio (small part)</h2>
+        <h2 class="display-6 link-body-emphasis mb-5">My portfolio (small part)</h2>
     
         <div class="row featurette">
           <div class="col-md-7">
